# anytype-automation

./: .dockerignore  .gitignore  Dockerfile  README.md  api-logs.sh  docker-compose.dev.example.yml  docker-compose.tagger.example.yml  docker-compose.yml  main.py  main_local.py  pyproject.toml  reqs.txt  restart-api.sh  start-api.sh  start.bat  tailscale.json
bruno/antype-automation/: Anytype Direct.bru  bruno.json
bruno/environments/: anytype-dev.bru  anytype-prod.bru
bruno/general/: folder.bru
bruno/pushover/: folder.bru
bruno/scheduled/: Recurrent Check.bru
bruno/tools/: List Views.bru  Other.bru  Search.bru  Space Scan.bru  Test.bru
config_examples/: config.yaml  docker-compose.dev.example.yml  docker-compose.example.yml
config_examples/dev/: launch.json
middlewares/: auth_middleware.py  exception_middleware.py
models/: data_request.py  health.py  migrate_request.py  scan_request.py  search_request.py  space_sync_request.py
routers/: __init__.py  anytype_router.py  general_router.py  pushover_router.py
services/: antype_service.py  anytype_automation.py  anytype_notification.py  anytype_service.py  health_service.py  pushover_service.py
src/: main.py  schedule.py  settings.py
src/middlewares/: auth_middleware.py  exception_middleware.py
src/models/: anytype_models.py  data.py  data_model.py  health.py  helper_models.py  (+2 more)
tests/: test_anytype_services.py
utils/: anytype.py  api_tools.py  archive_data.yaml  config.py  config.yaml  data.py  docs.py  exception.py  helper.py  logger.py  pushover.py  schedule.py
yaml/: config.yaml  data.yaml
(+54 files in other folders)
